[gd_scene load_steps=7 format=3 uid="uid://csnr2uymx2i8r"]

[ext_resource type="Texture2D" uid="uid://ojuh7rdx750r" path="res://Graphics/WhitePawn.svg" id="1"]
[ext_resource type="Texture2D" uid="uid://dvb6ml5hgxeli" path="res://Graphics/BlackPawn.svg" id="2"]
[ext_resource type="Script" path="res://Cursor.gd" id="3"]
[ext_resource type="PackedScene" path="res://InfoBoxElements/InfoBoxText.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://bb1h25gg2ng5u" path="res://InfoBoxElements/InfoBoxMargin.tscn" id="5"]
[ext_resource type="PackedScene" path="res://InfoBoxElements/InfoBoxTitle.tscn" id="6"]

[node name="Cursor" type="Node2D"]
z_index = 4096
script = ExtResource("3")
InfoBoxTitle = ExtResource("6")
InfoBoxText = ExtResource("4")
InfoBoxMargin = ExtResource("5")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -21.9203
offset_top = -2.12132
offset_right = 428.08
offset_bottom = 447.879
rotation = -0.270526
scale = Vector2(0.1, 0.1)
mouse_filter = 2
fill_mode = 2
texture_under = ExtResource("2")
texture_progress = ExtResource("1")

[node name="ExpandTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 150.0
offset_bottom = 40.0
grow_vertical = 2
mouse_filter = 2
color = Color(0.639216, 0.403922, 0.215686, 1)

[node name="InfoBox" type="VBoxContainer" parent="."]
offset_right = 250.0
offset_bottom = 40.0
mouse_filter = 2
alignment = 1

[connection signal="timeout" from="ExpandTimer" to="." method="_on_ExpandTimer_timeout"]
